Add homepage key and value to package json

--- a/phozy-react/package.json
+++ b/phozy-react/package.json
@@ -2,6 +2,7 @@
   "name": "phozy-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/wp-content/plugins/phozy/phozy-react/build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
